[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqgt-experiment-protocols"
version = "0.1.0"
description = "experiment protocols"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mqgt-core-params>=0.1.0", "mqgt-api-schema>=0.1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
